Wikipedia: talk page: fix visibility of "Low-importance" label

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.63
+@version        1.1.64
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -143,6 +143,12 @@ li.gallerybox div.thumb, /* https://commons.wikimedia.org/wiki/Category:Historic
 .mw-diff-table-prefix {
 	/* Diff page: drop horizontal scrollbar https://meta.wikimedia.org/w/index.php?title=Talk:Pageviews_Analysis&diff=next&oldid=26270848 */
 	margin-right: 5px;
+}
+
+/* "Low-importance" https://en.wikipedia.org/wiki/Talk:Armies_of_Exigo */
+.wpb-header-bubbles[style="background:#FFE7FF;border:0.075em solid #FFE7FF"] {
+	color: #bbb;
+	border: 1px solid #555 !important;
 }
 
 /* https://be.wikipedia.org/wiki/Галоўная_старонка */
